--- a/list-of-mathstuff.qmd
+++ b/list-of-mathstuff.qmd
@@ -1,2 +1,62 @@
 \providecommand{\Pageref}[1]{\hfill p.\pageref{#1}}
- [**Corollary 1**](#Corollary-1)\Pageref{Corollary-1}
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Theorem 1**](intro.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Theorem 1**](intro.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Theorem 1**](intro.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Theorem 1**](intro.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Theorem 1**](intro.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Theorem 1**](intro.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Theorem 1**](intro.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Theorem 1**](intro.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
