doesnot like python figure in solution

--- a/list-of-mathstuff.qmd
+++ b/list-of-mathstuff.qmd
@@ -4,3 +4,7 @@
  [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
 
  [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
