--- a/list-of-mathstuff.qmd
+++ b/list-of-mathstuff.qmd
@@ -8,3 +8,7 @@
  [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
 
  [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
