--- a/list-of-mathstuff.qmd
+++ b/list-of-mathstuff.qmd
@@ -1,1 +1,4 @@
 \providecommand{\Pageref}[1]{\hfill p.\pageref{#1}}
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
