--- a/list-of-mathstuff.qmd
+++ b/list-of-mathstuff.qmd
@@ -1,2 +1,8 @@
 \providecommand{\Pageref}[1]{\hfill p.\pageref{#1}}
  [**Corollary 1**](#Corollary-1)\Pageref{Corollary-1}
+
+ [**Corollary 1**](1DFlows.qmd#Corollary-1)\Pageref{Corollary-1}
+
+ [**Definition 2**](1DFlows.qmd#Definition-2)\Pageref{Definition-2}
+
+ [**Theorem 3**](1DFlows.qmd#hartman-grobman): Hartman-Grobman\Pageref{hartman-grobman}
