--- a/Bifurcations.qmd
+++ b/Bifurcations.qmd
@@ -5,21 +5,31 @@ format: html
 
 ## Introduction
 
-1D dynamical systems on a line: solutions either tend to a steady state or go to $\pm \infty$.
+The solutions of
+$$
+\dot{x}=f(x)
+$$
 
-What is interesting: changes to the structure of solutions (i.e. when the number and/or stability of fixed points changes at particular parameter values.) Such points are known as bifurcation points.
+either *flow* to a fixed point or go to $\pm \infty$.
+
+What is interesting about the study of such problems? Identifying when the structure of solutions (i.e. when the number and/or stability of fixed points changes at particular parameter values). Such points are known as bifurcation points.
+
+At a bifurcation point of a 1D system the eigenvalue is 0. the fixed point is *not* hyperbolic.
 
 
-at bfc point: eigenvalue=0. 
-
+Consider the 1D system
 $$
 \dot{x}=f(x,r)
 $$
+where $r$ is a parameter.
 
-Suppose fixed point $x^*$. 
+Suppose that 
 
-Taylor expand $f$ about $(x^*,r_c)$
+- there is a fixed point $x=x^*$.
+- at some $r=r_c$ the eigenvalue of the linearised system vanishes.
 
+Upon Taylor expansion of $f$ about $(x^*,r_c)$,
+we obtain
 $$
 \dot{x}=f(x^*,r_c)+\frac{\partial f}{\partial x}_{(x^*,r_c)}(x-x^*) + \frac{\partial f}{\partial r}_{(x^*,r_c)}(r-r_c)
 + \frac{1}{2}(x-x_c)^2\frac{\partial^2 f}{\partial x^2}_{(x^*,r_c)}  + ... $$
@@ -30,26 +40,34 @@ $$
 \dot{x}= \frac{\partial f}{\partial r}_{(x^*,r_c)}(r-r_c)
 + \frac{1}{2}(x-x^*)^2\frac{\partial^2 f}{\partial x^2}_{(x^*,r_c)}  +\frac{1}{2}(r-r_c)^2\frac{\partial^2 f}{\partial r^2}_{(x^*,r_c)} +(r-r_c)(x-x^*)\frac{\partial^2 f}{\partial r \partial x}_{(x^*,r_c)}  ... $$
 
-Close to a bifurcation point, stability will be determined by higher order derivative of $f$ w.r.t. $x$ and $r$.
+Close to a bifurcation point, the stability classification will be determined by the higher order derivatives of $f$ w.r.t. $x$ and $r$.
+
+It can be shown that bifurcations of the systems
+$$
+\dot{x}=f(x,r), \quad x(0)=x_0
+$$
+can be reduced to one of three *normal forms*:
+
+- saddle node bifurcations
+- transcritical bifurcations
+- pitchfork  bifurcations
 
 ## Saddle node
 
-At a saddle node bifurcation, two fixed points move towards one another and mutually annihilate. Consider the ODE
+At a saddle node bifurcation, two fixed points move towards one another and mutually annihilate. The canonical form is given by
 
 $$
 \dot{x}=f(x,r)=r+x^2,
-$$
+$$ {#eq-saddlenode1d}
 where $r \in \Re$.
 
 
 ::: {#exm-    }
 
-Determine the fixed points and their linear stability
+Identify  the fixed points of @eq-saddlenode1d and determine their linear stability.
 :::
 
 ::: {.Solution}
-
-
 
 The fixed points are 
 $$
@@ -59,16 +77,23 @@ $$
 In the case $r<0$
 
 $$
- f'(x^*)=2\pm \sqrt{-r}.
+ f'(x^*)=\pm 2\sqrt{-r}.
 $$
 
 Hence $x^*_-$ is linearly stable and $x^*_+$ is linearly unstable.
 
-For $r=0$ the fixed point is half-stable and it vanishes for $r>0$. Upon plotting $x^*$ against $r$ we obtain a bifurcation diagram.
-
+For $r=0$ the fixed point is *half-stable* and it vanishes for $r>0$. Upon plotting $x^*$ against $r$ we obtain a bifurcation diagram.
 :::
 
+In @fig-fsaddlenode we plot $f$ at three different values of $r$. Note that when $r>0$, $f>0$ and the solution is an increasing function of time.
+
+At $r=0$ there is a double root of $f$. Here the fixed point is *half stable*. For the initial condition $x_0<0$ the solution will increase until $x(t=0)$. It is stable to perturbations along the negative $x$ axis. However, for $x_0>0$ $f>0$ and the solution is an increasing function of time. Hence the solution is unstable to perturbations with $x_0>0$. Hence the fixed point $x^*=0$ is defined to be half-stable when $r=0$.
+
+
+::: {#fig-fsaddlenode}
 ```{python}
+#| code-fold: true
+
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -101,17 +126,17 @@ for i,r_i in enumerate(r_vec):
     ax[i].set_ylim([-2,2])
 
     x_arrows = np.linspace(-1.8, 1.8, 6)
-    f_arrows = r * x_arrows - x_arrows**3
+    f_arrows = r+x_arrows**2
 
     for xa, fa in zip(x_arrows, f_arrows):
-        if abs(fa) < 1e-3:
+        if abs(fa) < 1e-6:
             continue
         direction = np.sign(fa)
         ax[i].arrow(
             xa, 0,
             0.12 * direction, 0,
             head_width=0.08,
-            head_length=0.08,
+            head_length=0.16,
             fc='k', ec='k',
             length_includes_head=True
         )
@@ -120,8 +145,16 @@ for i,r_i in enumerate(r_vec):
 
 ```
 
+:::
+
+
+In @fig-saddlenodebfc we plot the fixed points against the parameter $r$. For $r<0$ there are two fixed points ($\sqrt{r}$ is linearly unstable whilst $-\sqrt{r}$ is linearly stable). Usually some annotation is used to denote the stability. For $r>0$ there are no fixed points. 
+
+:::{#fig-saddlenodebfc}
 
 ```{python}
+#| code-fold: true
+
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -159,15 +192,148 @@ plt.show()
 
 
 ```
-
-::: {#exm-    }
-Sketch the bifurcation diagram for the following ODE:
-$$
-\dot{x}=1+rx+x^2.
-$$
 :::
 
-Note that a saddle-node bifurcation is defined by a tangency condition such that 
+::: {.content-visible when-format="html"}
+
+With the app below you can explore how the value of the parameter value $r$ affects system dynamics. 
+
+The app computes solutions to 
+$$
+\dot{x}=r+x^2, \quad x(0)=x_0, \quad t \in[0,T].
+$$
+
+```{shinylive-python}
+#| standalone: true
+#| viewerHeight: 800
+#| label: fig-saddlenode
+
+
+from shiny import App, Inputs, Outputs, Session, render, ui
+from shiny import reactive
+
+import numpy as np
+from pathlib import Path
+import matplotlib.pyplot as plt
+from scipy.integrate import odeint
+
+app_ui = ui.page_fluid(
+                 
+    ui.input_slider(id="u0",label="x_0 (Init. Cond.)",min=-1.0,max=1.0,value=0.5,step=0.01),
+    ui.input_slider(id="T",label="T (Time)",min=0.1,max=60.0,value=20.0,step=1.0),
+    ui.input_slider(id="r",label="r",min=-1.0,max=1.0,value=0.1,step=0.01),
+    ui.output_plot("plot"),
+
+)
+
+def server(input, output, session):
+    @output
+    @render.plot
+    def plot():
+        fig, ax = plt.subplots(3,1,figsize=(12, 4))
+        #ax.set_ylim([-2, 2])
+        #         
+        r=float(input.r())
+        u0=float(input.u0())
+        T=int(input.T())
+
+        if r>0:
+            T=1/np.sqrt(r)*(np.pi/2.0-np.arctan(u0/np.sqrt(r)))
+        elif (r<0):
+            if u0>np.sqrt(-r):
+                T=1/np.sqrt(-r)*(np.pi/2.0-np.arctan(u0/np.sqrt(-r)))
+        else:
+            T=1/u0
+        
+
+        # Define rhs of bfc ODE 
+        def saddle_node_bfc_rhs(y,t,r):
+          rhs=r+y**2.0
+          return rhs
+        
+        def ODESol(saddle_node_bfc_rhs,y_0,t,r):
+            y=np.zeros_like(t,dtype=float)
+            init_cond=y_0
+
+            
+            sol1 = odeint(saddle_node_bfc_rhs, init_cond,t,args=(r,))
+            return sol1
+            
+        # Define discretised t domain
+        t = np.linspace(0, T)
+        # define initial conditions
+        init_cond=u0
+        
+        ax[0].set_xlabel('$t$')
+        ax[0].set_ylabel('$x(t)$')
+
+        plt.grid()
+        
+        # Compute numerical solution of ODEs
+        sol1 = ODESol(saddle_node_bfc_rhs,init_cond,t,r)
+
+        # Plot results
+        x=sol1
+        
+        ax[0].plot(t,x)
+        ax[0].set_xlabel('$t$')
+        ax[0].set_ylabel('$x$')
+        ax[0].set_ylim([-3,3])
+        ax[0].set_title('Numerical solution')
+
+        r_values = np.linspace(-2.0, 2.0, 1000)  # range of r values
+        
+        x=np.sqrt(r_values)
+
+        ax[1].plot(-r_values,x,'k--',-r_values,-x,'k')
+        ax[1].set_xlabel('$r$')
+        ax[1].set_ylabel('$x^*$')
+        ax[1].set_xlim([-3,3])
+        ax[1].set_title('Bifurcation diagram')
+        ax[1].plot([r,r],[-3,3],'--')
+
+
+        x_plot=np.linspace(-3,3)
+        f=saddle_node_bfc_rhs(x_plot,0,r)
+        ax[2].plot(x_plot,f)
+        ax[2].set_xlabel('$x$')
+        ax[2].set_ylabel('$f$')
+        ax[2].set_ylim([-2,2])
+        ax[2].plot([u0,u0],[-2,2],'--')
+
+        ax[2].set_title('Phase portrait')
+        
+
+
+        
+app = App(app_ui, server)
+```
+
+An app to exploring behaviour of the saddle-node bifurcation.
+:::
+
+
+
+
+
+
+
+::: {#exm-    }
+Consider the following ODE:
+$$
+\dot{x}=1+rx+x^2, \quad x(0)=x_0.
+$$
+
+1. Sketch the bifurcation diagram.
+2. Show that upon introducing rescaled variables, the ODE can be written in the normal form
+$$
+\dot{y}=r'+y^2.
+$$
+Hint: try completing the square.
+
+:::
+
+<!--Note that a saddle-node bifurcation is defined by a tangency condition such that 
 $$
 \frac{\partial f}{\partial x}_{(x^*,r_c)}.
 $$
@@ -178,11 +344,16 @@ $$
 + \frac{1}{2}(x-x_c)^2\frac{\partial^2 f}{\partial x^2}_{(x^*,r_c)} 
 $$
 i.e. the right-hand side is linear in $r$ and quadratic in $x$.
+-->
 
 
 ## Transcritical
 
-At a transcritical bifurcation the stability of a fixed point changes as a parameter is varied. The *normal form* for a transcritical bifurcation is
+At a transcritical bifurcation the stability of a fixed point changes as a parameter is varied. However, fixed points do not 
+*disappear*, as was the case with the saddle node bifurcation.
+
+
+The *normal form* for a transcritical bifurcation is
 
 $$
 \dot{x}=rx-x^2,
@@ -200,7 +371,13 @@ The fixed points are $x^*=0$ and $x^*=r$. For $r<0$, $x^*=r$ is linearly unstabl
 
 :::
 
+In @fig-transcritf the function $f$ is plotted for different values of the parameter $r$. The origin is always a fixed point. For $r<0$ there is a fixed point on the negative real axis whilst for $r>0$ there is a fixed point on the positive real axis. Hence the number of fixed points is two for $|r|>0$. This bifurcation is fundamentally different to the saddle node bifurcation (where there are no fixed points on one side of the bifurcation).
+
+
+::: {#fig-transcritf}
 ```{python}
+#| code-fold: true
+
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -236,7 +413,7 @@ for i,r_i in enumerate(r_vec):
     ax[i].set_ylim([-2,2])
 
     x_arrows = np.linspace(-1.8, 1.8, 6)
-    f_arrows = r * x_arrows - x_arrows**3
+    f_arrows = r * x_arrows - x_arrows**2
 
     for xa, fa in zip(x_arrows, f_arrows):
         if abs(fa) < 1e-3:
@@ -255,8 +432,18 @@ for i,r_i in enumerate(r_vec):
 
 ```
 
+:::
+
+
+
+In @fig-transcritbfc we plot a bifurcation diagram for the transcritical bifurcation. Note that $x^*=0$ is always a fixed points but it's stability changes at $r=0$.
+
+::: {#fig-transcritbfc}
 
 ```{python}
+#| code-fold: true
+
+
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -297,7 +484,142 @@ plt.show()
 
 
 ```
+:::
 
+
+::: {.content-visible when-format="html"}
+
+With the app below you can explore how the value of the parameter value $r$ affects system dynamics for the transcritical bifurcation. 
+
+The app computes solutions to 
+$$
+\dot{x}=rx-x^2, \quad x(0)=x_0, \quad t \in[0,T].
+$$
+
+```{shinylive-python}
+#| standalone: true
+#| viewerHeight: 800
+#| label: fig-transcrit
+
+
+from shiny import App, Inputs, Outputs, Session, render, ui
+from shiny import reactive
+
+import numpy as np
+from pathlib import Path
+import matplotlib.pyplot as plt
+from scipy.integrate import odeint
+from scipy.integrate import solve_ivp
+
+app_ui = ui.page_fluid(
+                 
+    ui.input_slider(id="u0",label="x_0 (Init. Cond.)",min=-3.0,max=3.0,value=0.5,step=0.01),
+    ui.input_slider(id="T",label="T (Time)",min=0.1,max=60.0,value=20.0,step=1.0),
+    ui.input_slider(id="r",label="r",min=-2.0,max=2.0,value=0.1,step=0.1),
+    ui.output_plot("plot"),
+
+)
+
+def server(input, output, session):
+    @output
+    @render.plot
+    def plot():
+        fig, ax = plt.subplots(3,1,figsize=(12, 4))
+        #ax.set_ylim([-2, 2])
+        #         
+        r=float(input.r())
+        u0=float(input.u0())
+        T=int(input.T())
+    
+        
+        # Define rhs of bfc ODE 
+        def saddle_node_bfc_rhs(t,y,r):
+          rhs=r*y-y**2
+          return rhs
+        def stop_event(t, y,r):
+            return np.abs(y[0]-10)          # trigger when y[0] == 0
+
+        
+        def ODESol(saddle_node_bfc_rhs,y_0,T,r):
+            #y=np.zeros_like(t,dtype=float)
+            init_cond=y_0
+
+            stop_event.terminal = True   # STOP integration
+            stop_event.direction = 1   # only trigger when crossing downward
+
+            sol1 = solve_ivp(saddle_node_bfc_rhs,t_span=(0, T),y0=[init_cond],
+                events=stop_event,args=(r,)
+            )
+            return sol1
+            
+        # Define discretised t domain
+        # define initial conditions
+        init_cond=u0
+        
+        ax[0].set_xlabel('$t$')
+        ax[0].set_ylabel('$x(t)$')
+
+        plt.grid()
+        
+        # Compute numerical solution of ODEs
+        sol1 = ODESol(saddle_node_bfc_rhs,init_cond,T,r)
+        
+        ax[0].plot(sol1.t,sol1.y[0])
+        ax[0].set_xlabel('$t$')
+        ax[0].set_ylabel('$x$')
+        ax[0].set_ylim([-10,10])
+        ax[0].set_title('Numerical solution')
+
+        
+        r_values = np.linspace(-2.0, 2.0, 1000)  # range of r values
+        
+        x_1=np.zeros_like(r_values)
+        x_2=r_values
+
+        ax[1].plot(r_values[r_values<0],x_1[r_values<0],'k',r_values[r_values<0],x_2[r_values<0],'k--')
+        ax[1].plot(r_values[r_values>0],x_1[r_values>0],'k--',r_values[r_values>0],x_2[r_values>0],'k')
+        ax[1].set_xlabel('$r$')
+        ax[1].set_ylabel('$x^*$')
+        ax[1].set_xlim([-3,3])
+        ax[1].set_title('Bifurcation diagram')
+        ax[1].plot([r,r],[-3,3],'--')
+
+        
+        x_plot=np.linspace(-3,3)
+        f=saddle_node_bfc_rhs(0,x_plot,r)
+        ax[2].plot(x_plot,f)
+        ax[2].set_xlabel('$x$')
+        ax[2].set_ylabel('$f$')
+        ax[2].set_ylim([-2,2])
+        ax[2].plot([u0,u0],[-2,2],'--')
+
+        ax[2].set_title('Phase portrait')
+
+        x_arrows = np.linspace(-1.8, 1.8, 6)
+        f_arrows = r * x_arrows - x_arrows**2
+
+        for xa, fa in zip(x_arrows, f_arrows):
+            if abs(fa) < 1e-3:
+                continue
+            direction = np.sign(fa)
+            ax[2].arrow(
+                xa, 0,
+                0.12 * direction, 0,
+                head_width=0.2,
+                head_length=0.28,
+                fc='k', ec='k',
+                length_includes_head=True
+            )
+        
+                
+app = App(app_ui, server)
+```
+
+An app for exploring behaviour of the transcritical bifurcation.
+:::
+
+
+<!--
 For a transcritical bifurcation
 
 $$
@@ -310,6 +632,7 @@ $$
 \dot{x}= 
 \frac{1}{2}(x-x^*)^2\frac{\partial^2 f}{\partial x^2}_{(x^*,r_c)} +(r-r_c)(x-x^*)\frac{\partial^2 f}{\partial r \partial x}_{(x^*,r_c)} 
 $$
+-->
 
 ::: {#exm-    }
 
@@ -321,22 +644,109 @@ $$
 
 
 :::
+
+::: {#exm-    }
+
+Consider the ODE
+
+$$
+\dot{x}=r\ln x + x-1.
+$$
+
+1. Show that $x^*=1$ is a fixed point. 
+2. Make a change of variables $u=x-1$ in order to analyse perturbations about the fixed point.
+3. Use a Taylor expansion to show that this system can be approximated by the transcritical normal form. Hence deduce that the bifurcation vaue is $r=-1$.
+4. Show that the system can be reduced to the normal form
+$$
+\dot{X}=RX-X^2
+$$
+by making an appropriate change of variables.
+
+
+:::
+
+
  
+
 
 ## Pitchfork
 
 Pitchfork bifurcations often arise in situations with symmetry. Typically, two or more fixed points appear/disappear together.
 
-### Supercritical
+### Supercritical pitchfork
 
-The normal form of the supercritical bifurcation is
+
+The normal form of the supercritical pitchfork bifurcation is
 $$
 \dot{x}=rx-x^3,
 $$
 
 
+::: {#exm-    }
 
+Identify the fixed points and determine their linear stability
+
+:::
+
+
+
+::: {.Solution}
+The fixed points satisfy
+$$
+rx^*-{x^*}^3=0
+$$
+
+Hence $x^*$ is a fixed point. Other fixed points satisfy
+$$
+r-{x^*}^2=0
+$$
+
+Hence there is a pair of fixed points given by
+$$
+x^*= \pm \sqrt{r},
+$$
+defined for $r>0$.
+
+For 
+$$
+f(x,r)=rx-x^3
+$$
+differentiation yields
+$$
+f'(x)=r-3x^2.
+$$
+
+At $x^*=0$
+
+$$
+f'(0)=r.
+$$
+
+For $r<0$, $x^*=0$ is linearly stable. For $r>0$, $x^*=0$ is linearly unstable.  There is a bifurcation at $r=0$.
+
+At $x^*= \pm \sqrt{r}$ 
+
+$$
+f'(\pm \sqrt{r})=r-3r=-2r.
+$$
+
+Hence when real, non-trivial fixed points exist $r>0$ they are linearly stable.
+
+At $r=0$ the fixed points coalesce and the fixed point is half stable. 
+
+:::
+
+
+
+In @fig-supcritf we plot $f$ for three different values of $r$. For $r<0$ it is clear that $x^*=0$ is a uniquye fixed point and that it is linearly stable. For $r>0$ $f$ is a cubic with three real roots. Note that the non-zero roots are linearly stable and symmetrically distributed about the origin. We refer to a system with two linearly stable fixd points as being *bistable*.
+
+
+
+::: {#fig-supcritf}
 ```{python}
+#| code-fold: true
+
+
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -388,8 +798,17 @@ for i,r_i in enumerate(r_vec):
 
 ```
 
+:::
+
+
+In @fig-supcritbfc we plot a bifurcation diagram for the supercritical pitchfork. Note that when $r<0$ there is a single fixed point that is linearly stable. For $r>0$ there are three fixed points.
+
+::: {#fig-supcritbfc}
 
 ```{python}
+#| code-fold: true
+
+
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -430,15 +849,159 @@ plt.show()
 
 ```
 
+:::
 
-### Subcritical
+
+::: {.content-visible when-format="html"}
+
+With the app below you can explore how the value of the parameter value $r$ affects system dynamics for the supercritical pitchfork bifurcation. 
+
+The app computes solutions to 
+$$
+\dot{x}=rx-x^3, \quad x(0)=x_0, \quad t \in[0,T].
+$$
+
+1. Show that in the case where $r>0$ the initial conditions control which of the stable fixed points the system finds. 
+
+```{shinylive-python}
+#| standalone: true
+#| viewerHeight: 800
+#| label: fig-transcrit
+
+
+from shiny import App, Inputs, Outputs, Session, render, ui
+from shiny import reactive
+
+import numpy as np
+from pathlib import Path
+import matplotlib.pyplot as plt
+from scipy.integrate import odeint
+from scipy.integrate import solve_ivp
+
+app_ui = ui.page_fluid(
+                 
+    ui.input_slider(id="u0",label="x_0 (Init. Cond.)",min=-3.0,max=3.0,value=0.5,step=0.01),
+    ui.input_slider(id="T",label="T (Time)",min=0.1,max=60.0,value=20.0,step=1.0),
+    ui.input_slider(id="r",label="r",min=-2.0,max=2.0,value=0.1,step=0.1),
+    ui.output_plot("plot"),
+
+)
+
+def server(input, output, session):
+    @output
+    @render.plot
+    def plot():
+        fig, ax = plt.subplots(3,1,figsize=(12, 4))
+        #ax.set_ylim([-2, 2])
+        #         
+        r=float(input.r())
+        u0=float(input.u0())
+        T=int(input.T())
+    
+        
+        # Define rhs of bfc ODE 
+        def super_pitchfork_bfc_rhs(t,y,r):
+          rhs=r*y-y**3
+          return rhs
+        def stop_event(t, y,r):
+            return np.abs(y[0]-10)          # trigger when y[0] == 0
+
+        
+        def ODESol(rhs,y_0,T,r):
+            #y=np.zeros_like(t,dtype=float)
+            init_cond=y_0
+
+            stop_event.terminal = True   # STOP integration
+            stop_event.direction = 1   # only trigger when crossing downward
+
+            sol1 = solve_ivp(rhs,t_span=(0, T),y0=[init_cond],
+                events=stop_event,args=(r,)
+            )
+            return sol1
+            
+        # Define discretised t domain
+        # define initial conditions
+        init_cond=u0
+        
+        ax[0].set_xlabel('$t$')
+        ax[0].set_ylabel('$x(t)$')
+
+        plt.grid()
+        
+        # Compute numerical solution of ODEs
+        sol1 = ODESol(super_pitchfork_bfc_rhs,init_cond,T,r)
+        
+        ax[0].plot(sol1.t,sol1.y[0])
+        ax[0].set_xlabel('$t$')
+        ax[0].set_ylabel('$x$')
+        ax[0].set_ylim([-2.5,2.5])
+        ax[0].set_title('Numerical solution')
+
+        
+        r_values = np.linspace(-2.0, 2.0, 1000)  # range of r values
+        r_values2 = np.linspace(0.0, 2.0, 1000)  # range of r values
+
+        
+        x_1=np.zeros_like(r_values)
+        x_2=np.sqrt(r_values2)
+
+        ax[1].plot(r_values,x_1,'k')
+
+        ax[1].plot(r_values2,x_2,'k--',r_values2,-x_2,'k--')
+
+        ax[1].set_xlabel('$r$')
+        ax[1].set_ylabel('$x^*$')
+        ax[1].set_xlim([-3,3])
+        ax[1].set_title('Bifurcation diagram')
+        ax[1].plot([r,r],[-3,3],'--')
+
+        
+        x_plot=np.linspace(-3,3)
+        f=super_pitchfork_bfc_rhs(0,x_plot,r)
+        ax[2].plot(x_plot,f)
+        ax[2].set_xlabel('$x$')
+        ax[2].set_ylabel('$f$')
+        ax[2].set_ylim([-2,2])
+        ax[2].plot([u0,u0],[-2,2],'--')
+
+        ax[2].set_title('Phase portrait')
+
+        x_arrows = np.linspace(-1.8, 1.8, 6)
+        f_arrows = r * x_arrows - x_arrows**3
+
+        for xa, fa in zip(x_arrows, f_arrows):
+            if abs(fa) < 1e-3:
+                continue
+            direction = np.sign(fa)
+            ax[2].arrow(
+                xa, 0,
+                0.12 * direction, 0,
+                head_width=0.2,
+                head_length=0.28,
+                fc='k', ec='k',
+                length_includes_head=True
+            )
+        
+                
+app = App(app_ui, server)
+```
+
+An app for exploring behaviour of the supercritical pitchfork bifurcation.
+:::
+
+
+### Subcritical pitchfork
 
 $$
 \dot{x}=rx+x^3,
 $$
 
 
+
+::: {#fig-subcritbfc}
 ```{python}
+#| code-fold: true
+
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -489,9 +1052,14 @@ for i,r_i in enumerate(r_vec):
     fig.supylabel('$\dot{x}$')
 
 ```
+:::
 
 
+::: {#fig-subcritf}
 ```{python}
+#| code-fold: true
+
+
 import numpy as np
 import matplotlib.pyplot as plt
 
@@ -531,7 +1099,9 @@ plt.show()
 
 
 ```
+:::
 
+<!--
 ## Application: the spruce budworm model
 The spruce budworm is a destructive and widely distributed forest defoliator in North America. Massive outbreaks occur periodically and can destroy large quantities of valuable spruce and fir. To understand the outbreak behaviour and develop and management strategies, a series of mathematical models have been developed, beginning with @ludwig1978qualitative. The goal of the models is to explain the qualitative pattern of sudden outbreaks and then a sudden collapse.
 
@@ -607,7 +1177,11 @@ $$
 Note that @eq-budwormnondim has two nondimensional parameters and all variables are dimensionless.  See @fig-sprucebudworm-rhs for a plot of right-hand side of equation @eq-budwormnondim. What kind of behaviours do you expect to see from the model? 
 
 
+:::
 ```{python}
+#| code-fold: true
+
+
 #| label: fig-sprucebudworm-rhs
 #| fig-cap: "RHS of spr. budworm model"
 import numpy as np
@@ -651,6 +1225,8 @@ plt.grid(True)
 plt.show()
 ```
 
+:::
+
 ### Numerical solutions
 In @fig-sprucebudworm-numsol we plot some numerical solutions of @eq-budwormnondim at different values of the parameter $r$. 
 
@@ -660,7 +1236,12 @@ Our goal is to analyse the model and understand why different parameter values y
 
 
 
+
+:::
+
 ```{python}
+#| code-fold: true
+
 #| label: fig-sprucebudworm-numsol
 #| fig-cap: "Numerical solution of spr. budworm model"
 
@@ -686,6 +1267,8 @@ plt.ylabel('$N$')
 plt.grid()
 plt.show()
 ```
+
+:::
 
 
 ### Steady state analysis
@@ -731,8 +1314,6 @@ There is a turning point at $n^*=1$. Here $g=1/2$.
 As $n^*\rightarrow \infty$, $g\rightarrow 0$.
 $f'(0)=1$.
 
-
-
 ### Linear stability analysis
 
 The linear stability of the model is determined by the quantity
@@ -749,18 +1330,18 @@ and the steady state is linearly unstable.
 Given the  nonzero steady states have not been calculated explicitly, we proceed using graphical analysis of stability. In @fig-sprucebudworm-rhsfg  (b) we plot the right-hand side of @eq-budwormnondim against $n$ and examine the cases of large, small and intermediate $r$ for a given value of $q$. 
 
 When $r$ is both large and small the nonzero steady state is stable (the derivative at the roots is negative). 
- In the case where three biologically relevant roots exist, the intermediate root is unstable.
+In the case where three biologically relevant roots exist, the intermediate root is unstable.
 
+:::
 ```{python}
+#| code-fold: true
+
 #| label: fig-sprucebudworm-rhsfg
 #| fig-cap: "RHS of spr. budworm model"
 import numpy as np
 import matplotlib.pyplot as plt
 import scipy
 from scipy.integrate import odeint
-
-
-
 
 # Define initial condition
 N_0=0.1
@@ -815,6 +1396,8 @@ plt.tight_layout()
 plt.show()
 ```
 
+:::
+
 
 
 
@@ -862,7 +1445,10 @@ $$
 \left(\frac{2n{^*}^3}{n{^*}^{2}-1},\frac{2n{^*}^{3}}{(1+n{^*}^{2})^2}\right) \ \ \ \ \ \ \ n^*>1.
 $$
 
+
+:::
 ```{python}
+#| code-fold: true
 #| label: fig-sprucebudworm-rq
 #| fig-cap: "Bifurcations in the rq plane"
 
@@ -891,6 +1477,8 @@ plt.grid(True)
 
 plt.show()
 ```
+
+:::
 
 By varying values of $n^*$ in @fig-sprucebudworm-rq we plot a region of instability. Note for example that $q\rightarrow \infty$ as $n^*\rightarrow 1$ and as  $n^*\rightarrow \infty$. Note also that in these limits $r$ must take the value 1/2 and 0, respectively.
 
@@ -934,7 +1522,7 @@ See @fig-sprucebudworm-rq.
 ### Hysteresis 
 
 Finally, rearranging the steady-state equation 
- $$
+$$
   r(1-\frac{n^*}{q}) = \frac{n^*}{1+n{^*}^{2}},
  $$
  we obtain
@@ -944,7 +1532,10 @@ $$ {#eq-sprucebudwormrpara}
 
 Considering $n^*<q$ we  compute $r$; plotting $n^*$ against $r$ yields the bifurcation curve presented in @fig-sprucebudworm-bfc. 
 
+
+:::
 ```{python}
+#| code-fold: true
 #| label: fig-sprucebudworm-bfc
 #| fig-cap: "Bifurcations in the rq plane"
 
@@ -978,6 +1569,7 @@ plt.grid(True)
 plt.show()
 ```
 
+:::
 
 A system exhibiting hysteresis shows a response to an increases in a control parameter that is not exactly reversed when the parameter is decreased. We can show that the spruce budworm model exhibits hysteresis by considering the argument below.
 
@@ -995,3 +1587,5 @@ Suppose $r$ is initially small ($r<r_1$). There is only one steady-state and any
 
 
 ## References
+
+-->
